# GFX

./: .gitmodules  CMakeLists.txt
Example/: CMakeLists.txt  Main.cpp
Example/Assets/Shaders/: fragment.glsl  sprite_fragment.glsl  text_fragment.glsl  text_vertex.glsl  vertex.glsl
ExternalLibs/: CMakeLists.txt
GFX/: CMakeLists.txt
GFX/Core/: CMakeLists.txt
GFX/Core/BaseTypes/include/: NonCopyableButMovable.h  Singleton.h  Transformable.h
GFX/Core/BaseTypes/src/: Transformable.cpp
GFX/Core/Camera/include/: Camera.h
GFX/Core/Camera/src/: Camera.cpp
GFX/Core/Input/include/: InputHandler.h
GFX/Core/Input/src/: InputHandler.cpp
GFX/Core/Loader/include/: Loader.h
GFX/Core/Loader/src/: Loader.cpp
GFX/Core/Tools/include/: Timer.h
GFX/Core/Tools/src/: Timer.cpp
GFX/Core/Window/include/: Window.h
GFX/Core/Window/src/: Window.cpp
GFX/Graphics/: CMakeLists.txt
GFX/Graphics/Graphics/include/: Color.h  Font.h  Material.h  Model.h  RenderContext.h  Renderer.h  Sprite.h  SpriteRenderer.h  Text.h  TextRenderer.h  Texture.h
GFX/Graphics/Graphics/src/: Font.cpp  Material.cpp  Model.cpp  RenderContext.cpp  Renderer.cpp  Sprite.cpp  SpriteRenderer.cpp  Text.cpp  TextRenderer.cpp  Texture.cpp
GFX/Graphics/RawGraphics/include/: ElementBufferObject.h  Mesh.h  RawTexture.h  Shader.h  UniformBufferObject.h  VertexArrayObject.h  VertexBufferLayout.h  VertexBufferObject.h
GFX/Graphics/RawGraphics/src/: ElementBufferObject.cpp  Mesh.cpp  RawTexture.cpp  Shader.cpp  UniformBufferObject.cpp  VertexArrayObject.cpp  VertexBufferObject.cpp
